# libserialport_plus

./: .gitmodules  .metadata  .pubignore  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  config.h  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/cc/jkob/flutter_serial_example/: MainActivity.kt
example/android/app/src/main/kotlin/cc/jkob/libserialport_plus_example/: MainActivity.kt
example/integration_test/: serial_port_reader_test.dart  serial_port_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
hook/: build.dart
ios/: flutter_serial.podspec  libserialport_plus.podspec
ios/Classes/: flutter_serial.c  libserialport_plus.c
lib/: flutter_serial.dart  flutter_serial_bindings_generated.dart  libserialport_plus.dart
lib/src/: lib.dart  libserialport_bindings.g.dart  serial_port.dart  serial_port_config.dart  serial_port_info.dart  serial_port_reader.dart
linux/: CMakeLists.txt
macos/: flutter_serial.podspec  libserialport_plus.podspec
macos/Classes/: config.h  flutter_serial.c  libserialport_plus.c
src/: CMakeLists.txt  flutter_serial.c
src/include/: config.h
test/: serial_port_reader_test.dart  serial_port_test.dart
tool/: ffigen.dart
windows/: CMakeLists.txt
